# taotaspy-resources

02-07-03-S-find-kiss-and-dry-balance.assets/python/todomvc-tests/: README.md
02-07-03-S-find-kiss-and-dry-balance.assets/python/todomvc-tests/tests/: test_app.py
02-07-03-S-find-kiss-and-dry-balance.assets/python/todomvc-tests/todomvc_tests.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
02-08-L-context-and-hiding-tech-details.assets/python/todomvc-tests/: .gitignore
02-08-L-context-and-hiding-tech-details.assets/python/todomvc-tests/tests/: conftest.py  test_app.py
02-09-T-hide-base-url-configuration.assets/python/todomvc-tests/: pyproject.toml
02-09-T-hide-base-url-configuration.assets/python/todomvc-tests/tests/: conftest.py  test_app.py
02-11-L-tests-independence-day.assets/python/todomvc-tests/tests/: conftest.py  test_app.py
03-01-L-harden-with-atomic-tests.assets/: test-pyramid.key
04-01-L-pageobjects-intro.assets/python/todomvc-tests/tests/: conftest.py  test_app.py
04-01-L-pageobjects-intro.assets/python/todomvc-tests/todomvc_tests.egg-info/: PKG-INFO
