[tool.poetry]
name = "todomvc-tests"
version = "0.1.0"
description = ""
authors = ["Iakiv Kramarenko"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "^2.*", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
